--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -49,10 +49,10 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-        <a href="https://github.com/aditya113141" class="twitter"><i class="icofont-github"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100038773941060" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/adityakumar-sinha-485a40193/" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="https://github.com/rphrishi4" class="twitter"><i class="icofont-github"></i></a>
+        <a href="https://www.facebook.com/rphrishi4/" class="facebook"><i class="icofont-facebook"></i></a>
+        <a href="https://www.instagram.com/hrishirane/" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/hrishikesh-rane/" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
 
     </div>
@@ -347,10 +347,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://github.com/aditya113141" class="twitter"><i class="icofont-github"></i></a>
-              <a href="https://www.facebook.com/profile.php?id=100038773941060" class="facebook"><i class="icofont-facebook"></i></a>
+              <a href="https://github.com/rphrishi4" class="twitter"><i class="icofont-github"></i></a>              
               <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-              <a href="https://www.linkedin.com/in/adityakumar-sinha-485a40193/" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/hrishikesh_rane/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -359,14 +358,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>adityakumar113141@gmail.com</p>
+            <p>hrishiatwork@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+91 6299774981</p>
+            <p>+91 7020098529</p>
           </div>
         </div>
       </div>
